# wpdetect

./: .gitignore  .pylintrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST  README.md  README.rst  SECURITY.md  bump_version.py  generate-changelog.sh  install-local.sh  pyproject.toml  release-tag.sh  requirements.txt  sample_urls.txt  setup.py
.github/: FUNDING.yml
.github/workflows/: changelog.yml  codeql.yml  pylint.yml  pypi-publish.yml
tests/utils/: test_print.py
utils/: bump_version.py  generate_changelog.py
wpdetect/: README.rst  __main__.py  cli_store.py  constants.py  helpers.py  lessURLs.txt  worker.py
wpdetect/utils/: bump_version.py  print.py  url.py  wp.py
