[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wpdetect"
version = "1.4.7"
dependencies = [
    "pyfiglet", "requests", "click", "toml"
]
authors = [
  { name="S M Mahmudul Hasan", email="he@smmahmudulhasan.com" },
]
description = "A WordPress detection tool, detects if a website is running WordPress"
readme = "README.md"
requires-python = ">=3.4"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    'Development Status :: 5 - Production/Stable',
    'Topic :: Software Development :: Build Tools',
    'Intended Audience :: Developers',
]

[project.urls]
"Homepage" = "https://github.com/IamLizu/wpdetect"
"Bug Tracker" = "https://github.com/IamLizu/wpdetect/issues"
"Changelog" = "https://github.com/IamLizu/wpdetect/blob/master/CHANGELOG.md"

[project.scripts]
wpdetect = "wpdetect.__main__:main"